# tinymsg

./: README.md  pyproject.toml  tinymsg.py
tests/: test_tinymsg.py
